# swarm-query

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py  queue.py
app/models/: schemas.py
app/rag/: embeddings.py  llm.py  prompts.py  retrieval.py
app/services/: pdf.py  qdrant_store.py  storage.py
app/tasks/: rq_tasks.py
